# trading

./: .gitignore  CLAUDE.md  pyproject.toml
.claude/: settings.json
.claude/skills/tdd/: SKILL.md
docs/: plan.md
docs/plans/: feature-analysis.md  technical-features.md  triple-barrier-labeling.md  volatility-estimator.md
examples/: download_spy_daily.py  feature_exploration.py
src/trading/: data.py
src/trading/features/: __init__.py  analysis.py  indicators.py  volatility.py
src/trading/labeling/: __init__.py  barriers.py
tests/unit/: test_barriers.py  test_data.py  test_feature_analysis.py  test_indicators.py  test_volatility.py
